Fix T43366 export/import materials inconsistent